syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.sora.proto";
option java_outer_classname = "GoodsProto";

package goods;

service GoodsInfo {
  rpc addGoods (Goods) returns (GoodsId);
  rpc getGoodsById(GoodsId) returns(Goods);
}

message Goods {
  int32 id = 1;
  string name=2;
  string description=3;
  float price=4;
}

message GoodsId {
  int32 id = 1;
}